removed accidently commited default settings file

--- a/templates/nodered.service.j2
+++ b/templates/nodered.service.j2
@@ -1,4 +1,4 @@
-# To consult the log : journalctl -u Node-RED
+# To consult the log : journalctl -f -u Node-RED
 [Unit]
 Description=Node-RED graphical event wiring tool
 After=syslog.target network.target
